--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset= "UTF-8">
+    <title> First project Practicum </title>
+    <link rel="stylesheet"
+          href="style.css"/>
+  </head>
+  <body>
+    <header class="header"> 
+    <div> </div>
+    </header>
+    <div class="jambotron"></div>
+    <div class="lost"></div>
+    <div class="about"></div>    
+  </body>
+  <footer>
+    
+  </footer>
+</html>  
