--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset= "UTF-8">
-    <title> First project Practicum </title>
+    <title> Оно тебе надо  </title>
     <link rel="stylesheet"
           href="style.css"/>
   </head>
