--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           href="style.css"/>
   </head>
   <body>
-    <header class="header"> 
+    <header style="background-color: #000;"class="header"> 
     <div> </div>
     </header>
     <div class="jambotron"></div>
